classDiagram

%% =========================
%% User Engagement Features
%% =========================

    class User {
        -UUID userId
        -String email
        -String passwordHash
        -String firstName
        -String lastName
        +updateProfile()
    }

    class Notification {
        -UUID notificationId
        -String message
        -Boolean isRead
        +markRead()
    }

    class Watchlist {
        -UUID watchlistId
        -String name
        +addInstrument()
        +removeInstrument()
    }

    class Instrument {
        -String symbol
        -String name
        -InstrumentType type
    }

%% =========================
%% Relationships
%% =========================

    User "1" --> "0..*" Watchlist : manages
    User "1" --> "0..*" Notification : receives

    Watchlist "0..*" --> "0..*" Instrument : tracks
